2004-12-08  Jan Patera <patera@users.sourceforge.net>
	* libexif/exif-entry.c: Data format of EXIF_TAG_USER_COMMENT:
	  Some packages like Canon ZoomBrowser EX 4.5 store only
	  one zero byte followed by 7 bytes of rubbish

2004-11-17  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-data.c: Make the last commit actually work.

2004-11-15  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-content.c: Complain if the same tag is added twice
	  to an IFD. Suggestion by Angela Wrobel.

2004-11-15  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-data.c: Additional debugging message if 
	  specification is violated.

2004-11-14  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/*: Plug another few memleaks. All found by Angala Wrobel.

2004-11-12  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-data.c: Clean up handling of MakerNote tags.

2004-11-11  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-mnote-data.c: Plug yet another memory leak.
	  Detected by Angela Wrobel.

2004-11-11  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-log.c: Plug another memory leak. Detected by 
	  Angela Wrobel.

2004-11-11  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/canon/exif-mnote-data-canon.c: Do not crash on strange
	  data. Pointed out by Angela Wrobel.

2004-11-11  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/*: Replace another few realloc by exif_mem_realloc.
	  Pointed out by Angela Wrobel.

2004-11-10  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/*.c: Change #include "" to #include <>.
	* Makefile.am:
	* exif-result.h: Removed.

2004-11-10  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-tag.[c,h] (exif_tag_from_name): New. Suggested by
	  Angela Wrobel.

2004-11-10  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-data.c (exif_data_free): Fix memleak found by 
	  Angela Wrobel.
	* contrib/watcom: Updated files contributed by Angela Wrobel.
