@@ -13,16 +13,20 @@ typedef enum {
 	EL_READ = 0,
 	EL_READ_SIZE_HIGH_BYTE,
 	EL_READ_SIZE_LOW_BYTE,
+	EL_READ_SIZE_HIGH_BYTE_FINAL,
+	EL_READ_SIZE_LOW_BYTE_FINAL,
 	EL_SKIP_BYTES,
 	EL_EXIF_FOUND,
-	EL_FAILED
 } ExifLoaderState;
 
 struct _ExifLoader {
 	ExifLoaderState state;
 
+	/* Small buffer used for detection of format */
+	unsigned char b[12];
+	unsigned char b_len;
+
 	unsigned int size;
-	int last_marker;
 	unsigned char *buf;
 	unsigned int bytes_read;
 
@@ -31,6 +35,8 @@ struct _ExifLoader {
 	ExifLog *log;
 	ExifMem *mem;
 };
+
+static const unsigned char ExifHeader[] = {0x45, 0x78, 0x69, 0x66, 0x00, 0x00};
 
 static void *
 exif_loader_alloc (ExifLoader *l, unsigned int i)
@@ -72,112 +78,125 @@ exif_loader_write_file (ExifLoader *l, const char *path)
 	fclose (f);
 }
 
+static unsigned int
+exif_loader_copy (ExifLoader *eld, unsigned char *buf, unsigned int len)
+{
+	if (!eld || (len && !buf) || (eld->bytes_read >= eld->size)) return 0;
+
+	/* If needed, allocate the buffer. */
+	if (!eld->buf) eld->buf = exif_loader_alloc (eld, eld->size);
+	if (!eld->buf) return 0;
+
+	/* Copy memory */
+	len = MIN (len, eld->size - eld->bytes_read);
+	memcpy (eld->buf + eld->bytes_read, buf, len);
+	eld->bytes_read += len;
+
+	return (eld->bytes_read >= eld->size) ? 0 : 1;
+}
+
 unsigned char
 exif_loader_write (ExifLoader *eld, unsigned char *buf, unsigned int len)
 {
-	unsigned int i, len_remain;
+	unsigned int i;
 
-	if (!eld || !buf || !len) return 0;
-	if (eld->state == EL_FAILED) return 0;
-	if (eld->size && eld->bytes_read == eld->size) return 0;
+	if (!eld || (len && !buf)) return 0;
+
+	switch (eld->state) {
+	case EL_EXIF_FOUND:
+		return exif_loader_copy (eld, buf, len);
+	case EL_SKIP_BYTES:
+		if (eld->size > len) { eld->size -= len; return 1; }
+		eld->state = EL_READ;
+		len -= eld->size;
+		buf += eld->size;
+		eld->b_len = 0;
+		break;
+	default:
+		break;
+	}
 
 	exif_log (eld->log, EXIF_LOG_CODE_DEBUG, "ExifLoader",
 		  "Scanning %i byte(s) of data...", len);
 
-	for (i = 0; (i < len) && (eld->state != EL_EXIF_FOUND) &&
-				 (eld->state != EL_FAILED); i++) 
+	/*
+	 * First fill the small buffer. Only continue if the buffer
+	 * is filled. Note that EXIF data contains at least 12 bytes.
+	 */
+	i = MIN (len, sizeof (eld->b) - eld->b_len);
+	if (i) {
+		memcpy (&eld->b[eld->b_len], buf, i);
+		eld->b_len += i;
+		if (eld->b_len < sizeof (eld->b)) return 1;
+		buf += i;
+		len -= i;
+	}
+
+	/* Check the small buffer against known formats. */
+	if (!memcmp (eld->b, "FUJIFILM", 8)) {
+		eld->state = EL_SKIP_BYTES;
+		eld->size = 112;
+	} else if (!memcmp (eld->b + 2, ExifHeader, sizeof (ExifHeader))) {
+		eld->state = EL_READ_SIZE_HIGH_BYTE_FINAL;
+	}
+
+	for (i = 0; i < sizeof (eld->b); i++)
 		switch (eld->state) {
+		case EL_EXIF_FOUND:
+			if (!exif_loader_write (eld, eld->b + i,
+					sizeof (eld->b) - i)) return 0;
+			return exif_loader_write (eld, buf, len);
 		case EL_SKIP_BYTES:
 			eld->size--;
-			if (eld->size == 0) {
-				eld->state = EL_READ;
-			}
+			if (!eld->size) eld->state = EL_READ;
 			break;
-			
 		case EL_READ_SIZE_HIGH_BYTE:
-			eld->size = buf [i] << 8;
+			eld->size = eld->b[i] << 8;
 			eld->state = EL_READ_SIZE_LOW_BYTE;
 			break;
-			
+		case EL_READ_SIZE_HIGH_BYTE_FINAL:
+			eld->size = eld->b[i] << 8;
+			eld->state = EL_READ_SIZE_LOW_BYTE_FINAL;
+			break;
 		case EL_READ_SIZE_LOW_BYTE:
-			eld->size |= buf [i];
-
-			switch (eld->last_marker) {
+			eld->size |= eld->b[i];
+			eld->state = EL_SKIP_BYTES;
+			eld->size -= 2;
+			break;
+		case EL_READ_SIZE_LOW_BYTE_FINAL:
+			eld->size |= eld->b[i];
+			eld->state = EL_EXIF_FOUND;
+			break;
+		default:
+			switch (eld->b[i]) {
+			case JPEG_MARKER_APP1:
+				eld->state = EL_READ_SIZE_HIGH_BYTE_FINAL;
+				break;
 			case JPEG_MARKER_APP0:
 			case JPEG_MARKER_APP13:
 			case JPEG_MARKER_COM:
-				eld->state = EL_SKIP_BYTES;
-				eld->size -= 2;
+				eld->state = EL_READ_SIZE_HIGH_BYTE;
 				break;
-
-			case JPEG_MARKER_APP1:
-				eld->state = EL_EXIF_FOUND;
-				break;
-
-			case 0:
-				/*
-				 * Assume that we are reading EXIF data. 
-				 * This should probably be verified by reading
-				 * some bytes ahead.
-				 */
-				eld->state = EL_EXIF_FOUND;
+			case 0xff:
+			case JPEG_MARKER_SOI:
 				break;
 			default:
+				exif_log (eld->log,
+					EXIF_LOG_CODE_CORRUPT_DATA,
+					"ExifLoader", _("The data supplied "
+						"does not seem to contain "
+						"EXIF data."));
+				exif_loader_reset (eld);
 				return 0;
 			}
-
-			eld->last_marker = 0;
-			break;
-
-		default:
-			if (buf[i] != 0xff) {
-				if (buf[i] == JPEG_MARKER_APP0 ||
-				    buf[i] == JPEG_MARKER_APP1 ||
-				    buf[i] == JPEG_MARKER_APP13 ||
-				    buf[i] == JPEG_MARKER_COM) {
-					eld->state = EL_READ_SIZE_HIGH_BYTE;
-					eld->last_marker = buf [i];
-
-				} else if (buf [i] == JPEG_MARKER_SOI) {
-					/* Nothing */
-				} else {
-					/* Assume that we are reading EXIF
-					 * data. This should probably be
-					 * verified by reading some bytes
-					 * ahead.
-					 */
-					eld->last_marker = JPEG_MARKER_APP1;
-					eld->state = EL_READ_SIZE_HIGH_BYTE;
-					i--;
-				}
-			}
 		}
 
-	len_remain = len - i;
-	if (!len_remain) return 1;
-
-	if (eld->state == EL_EXIF_FOUND) {
-		if (eld->buf == NULL) {
-			eld->buf = exif_loader_alloc (eld, eld->size);
-			if (!eld->buf) return 0;
-			eld->bytes_read = 0;
-		}
-
-		if (eld->bytes_read < eld->size) {
-			int cp_len;
-
-			/* the number of bytes we need to copy */
-			cp_len = MIN (eld->size - eld->bytes_read, len_remain);
-			
-			if ((cp_len + eld->bytes_read) > eld->size) return 1;
-
-			/* Copy memory */
-			memcpy (eld->buf + eld->bytes_read, &buf[i], cp_len);
-			eld->bytes_read += cp_len;
-		}
-	}
-
-	return 1;
+	/*
+	 * If we reach this point, the buffer has not been big enough
+	 * to read all data we need. Fill it with new data.
+	 */
+	eld->b_len = 0;
+	return exif_loader_write (eld, buf, len);
 }
 
 ExifLoader *
@@ -242,8 +261,8 @@ exif_loader_reset (ExifLoader *loader)
 	exif_mem_free (loader->mem, loader->buf); loader->buf = NULL;
 	loader->size = 0;
 	loader->bytes_read = 0;
-	loader->last_marker = 0;
 	loader->state = 0;
+	loader->b_len = 0;
 }
 
 ExifData *
